<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_share_button"
        android:icon="@drawable/button_image_share"
        app:iconTint="@color/textTab"
        app:iconTintMode="src_in"
        android:title="@string/label_share"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/menu_suggestion_button"
        android:icon="@drawable/button_image_suggestion"
        app:iconTint="@color/textTab"
        app:iconTintMode="src_in"
        android:title="@string/label_suggestion"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/menu_help_button"
        android:icon="@drawable/button_image_help"
        app:iconTint="@color/textTab"
        app:iconTintMode="src_in"
        android:title="@string/label_help"
        app:showAsAction="always"/>

</menu>