<?xml version="1.0" encoding="utf-8"?>
<com.ntredize.redstop.main.view.container.NonAutoFocusScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/help_content_f"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout style="@style/helpDialogInner">

        <!-- F3 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_fill"
                app:tint="?attr/star3Color"/>

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_fill"
                app:tint="?attr/star3Color"/>

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_fill"
                app:tint="?attr/star3Color"/>

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_outline"
                app:tint="?attr/star3Color"/>

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_outline"
                app:tint="?attr/star3Color"/>

        </LinearLayout>

        <TextView
            style="@style/helpDialogRedStarText"
            android:text="@string/help_company_star_type_f3"/>


        <!-- F2 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_fill"
                app:tint="?attr/star2Color"/>

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_fill"
                app:tint="?attr/star2Color"/>

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_outline"
                app:tint="?attr/star2Color"/>

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_outline"
                app:tint="?attr/star2Color"/>

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_outline"
                app:tint="?attr/star2Color"/>

        </LinearLayout>

        <TextView
            style="@style/helpDialogRedStarText"
            android:text="@string/help_company_star_type_f2"/>


        <!-- F1 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_fill"
                app:tint="?attr/star1Color"/>

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_outline"
                app:tint="?attr/star1Color"/>

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_outline"
                app:tint="?attr/star1Color"/>

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_outline"
                app:tint="?attr/star1Color"/>

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_outline"
                app:tint="?attr/star1Color"/>

        </LinearLayout>

        <TextView
            style="@style/helpDialogRedStarText"
            android:text="@string/help_company_star_type_f1"/>


        <!-- F0 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_outline"
                app:tint="?attr/star0Color"/>

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_outline"
                app:tint="?attr/star0Color"/>

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_outline"
                app:tint="?attr/star0Color"/>

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_outline"
                app:tint="?attr/star0Color"/>

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_outline"
                app:tint="?attr/star0Color"/>

        </LinearLayout>

        <TextView
            style="@style/helpDialogRedStarText"
            android:text="@string/help_company_star_type_f0"/>

    </LinearLayout>

</com.ntredize.redstop.main.view.container.NonAutoFocusScrollView>