<?xml version="1.0" encoding="utf-8"?>
<com.ntredize.redstop.main.view.container.NonAutoFocusScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/help_content_c"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout style="@style/helpDialogInner">

        <!-- C5 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_fill"
                app:tint="?attr/star5Color"/>

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_fill"
                app:tint="?attr/star5Color"/>

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_fill"
                app:tint="?attr/star5Color"/>

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_fill"
                app:tint="?attr/star5Color"/>

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_fill"
                app:tint="?attr/star5Color"/>

        </LinearLayout>

        <TextView
            style="@style/helpDialogRedStarText"
            android:text="@string/help_company_star_type_c5"/>


        <!-- C4 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_fill"
                app:tint="?attr/star4Color"/>

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_fill"
                app:tint="?attr/star4Color"/>

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_fill"
                app:tint="?attr/star4Color"/>

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_fill"
                app:tint="?attr/star4Color"/>

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_outline"
                app:tint="?attr/star4Color"/>

        </LinearLayout>

        <TextView
            style="@style/helpDialogRedStarText"
            android:text="@string/help_company_star_type_c4"/>


        <!-- C3 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_fill"
                app:tint="?attr/star3Color"/>

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_fill"
                app:tint="?attr/star3Color"/>

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_fill"
                app:tint="?attr/star3Color"/>

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_outline"
                app:tint="?attr/star3Color"/>

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_outline"
                app:tint="?attr/star3Color"/>

        </LinearLayout>

        <TextView
            style="@style/helpDialogRedStarText"
            android:text="@string/help_company_star_type_c3"/>


        <!-- C2 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_fill"
                app:tint="?attr/star2Color"/>

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_fill"
                app:tint="?attr/star2Color"/>

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_outline"
                app:tint="?attr/star2Color"/>

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_outline"
                app:tint="?attr/star2Color"/>

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_outline"
                app:tint="?attr/star2Color"/>

        </LinearLayout>

        <TextView
            style="@style/helpDialogRedStarText"
            android:text="@string/help_company_star_type_c2"/>


        <!-- C1 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_fill"
                app:tint="?attr/star1Color"/>

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_outline"
                app:tint="?attr/star1Color"/>

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_outline"
                app:tint="?attr/star1Color"/>

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_outline"
                app:tint="?attr/star1Color"/>

            <ImageView
                style="@style/helpDialogRedStarImage"
                android:contentDescription="@string/content_desc_company_red_star"
                android:src="@drawable/image_star_outline"
                app:tint="?attr/star1Color"/>

        </LinearLayout>

        <TextView
            style="@style/helpDialogRedStarText"
            android:text="@string/help_company_star_type_c1"/>

    </LinearLayout>

</com.ntredize.redstop.main.view.container.NonAutoFocusScrollView>